Began updating format of Kant

--- a/Critique of Pure Reason/Template.html
+++ b/Critique of Pure Reason/Template.html
@@ -3,67 +3,45 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Transcendental Aethetic, * - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Transcendental Aesthetic §4</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Transcendental Aethetic, * - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Volume_1/Part_1*).
+<hr>
+<h4>TRANSCENDENTAL AESTHETIC</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 1. Introductory</a></p>
+Section I. — Of Space<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 2.html'>§ 2. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html'>§ 3. Transcendental Exposition of the Conception of Space</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'><b>§ 4. Conclusions from the foregoing Conceptions *</b></a></p>
+Section II. — Of Time<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html'>§ 5. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
 <br>
-<br>
-
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-<tr>
-    <td>
-        *
-    </td>
-    <td> 
-        *
-    </td>
-</tr>
-<tr>
-    <td>
-        
-    </td>
-    <td> 
-        
-    </td>
-</tr>
-<!-- <a href="#Footnote 1">[1]</a> -->
-
-</table>
-
-<h3>Footnotes</h3>
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-</tr>
-<tr>
-    <td>
-        <a id="Footnote 1">[1]</a>
-    </td>
-    <td> 
-        <a id="Footnote 1">[1]</a>
-    </td>
-</tr>
-</table>
-
-<h1>Commentary</h1>
-
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
 <h3>Summary</h3>
-
 <p></p>
+<hr>
 
-<h3>Discussion</h3>
+<h3></h3>
 
-<p></p>
+<p class='indent'></p>
 
+<hr>
+<h3>Commentary</h3>
+
+<p class='indent'></p>
+
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
