Yet more formatting changes

--- a/Critique of Pure Reason/Introduction - I.html
+++ b/Critique of Pure Reason/Introduction - I.html
@@ -3,16 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Introduction - I. Of the Difference Between Pure and Empirical Knowledge - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>I. Of the Difference Between Pure and Empirical Knowledge</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Introduction - I. Of the Difference Between Pure and Empirical Knowledge - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><b>I.—Of the Difference Between Pure and Empirical Knowledge *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html'>§ 3. Transcendental Exposition of the Conception of Space</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'>§ 4. Conclusions from the foregoing Conceptions</a></p>
+Section II. — Of Time<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html'>§ 5. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">In this section, Kant introduces the distinction between "a priori" cognitions and "a posteriori" cognitions. A priori cognitions are beliefs, propositions, ideas, etc., which are independent of sensory perceptions, wherea a posteriori cognitions are dependent on sensory perceptions. Kant gives the proposition "Every change has a cause" as an example of an a priori cognition. Kant also introduces the idea that our experience of the world is a mixture of sensory inputs and the cognitive inputs of our own minds.</p>
 <br>
 
 <table>
@@ -75,13 +90,7 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 </table>
 
-<h1>Commentary</h1>
-
-<h3>Summary</h3>
-
-<p>In this section, Kant introduces the distinction between "a priori" cognitions and "a posteriori" cognitions. A priori cognitions are beliefs, propositions, ideas, etc., which are independent of sensory perceptions, wherea a posteriori cognitions are dependent on sensory perceptions. Kant gives the proposition "Every change has a cause" as an example of an a priori cognition. Kant also introduces the idea that our experience of the world is a mixture of sensory inputs and the cognitive inputs of our own minds.</p>
-
-<h3>Discussion</h3>
+<h3>Commentary</h3>
 
 <p>"It is quite possible that our empirical knowledge is a compound of that which we receive through impressions, and that which the faculty of cognition supplies from itself (sensuous impressions giving merely the occasion)." We have to push back against Kant even here, at the very beginning, or else we will get swept along in his labrynthine arguments (as philosophers have ever since). Even when he seems to be merely making a distinction, between a priori and a posteriori knowledge, he is smuggling in metaphysical propositions. A world in which the "faculty of cognition" is a concrete entity, capable of engaging is efficient causal relations, and capable of "supplying" knowledge to persons, is a very specific kind of world. If we grant Kant this distinction, then we've already tacitly admitted the existence of a supernatural soul, and supernatural knowledge that it can create. </p>
 
