--- a/Critique of Pure Reason/Transcendental Aesthetic - 2.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 2.html
@@ -3,15 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Transcendental Aethetic, Of Space, §2. Metaphysical Exposition of this Conception - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Transcendental Aesthetic §2.</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Transcendental Aethetic, Of Space, §2. Metaphysical Exposition of this Conception - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Volume_1/Part_1#b2).
+<hr>
+<h4>The Transcendental Aesthetic</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 1. Introductory</a></p>
+Section I. — Of Space<br>
+<p class='indent'><b>§ 2. Metaphysical Exposition of this Conception *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html'>§ 3. Transcendental Exposition of the Conception of Space</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'>§ 4. Conclusions from the foregoing Conceptions</a></p>
+Section II. — Of Time<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html'>§ 5. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
+<br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+
+<h3>Summary</h3>
+<p>Kant discusses some of the properties of space and implicitly argues that space is not a real entity, and not a property of things-in-themselves, but only part of the way we structure our perceptions.</p>
 <br>
 <br>
 
@@ -75,15 +92,13 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 </table>
 
-<h1>Commentary</h1>
 
-<h3>Summary</h3>
+<h3>Commentary</h3>
 
-<p>Kant discusses some of the properties of space and implicitly argues that space is not a real entity, and not a property of things-in-themselves, but only part of the way we structure our perceptions.</p>
-
-<h3>Discussion</h3>
-
-<p>Here we see Kant's first assertion that there is some connection between introspection and time. This makes sense aesthetically: space vs. time is one dichotomy; internal vs. external is another dichotomy. The concept of space is more connected to the concept of externality. Thus it makes sense that space would be related to sensation and time would be related to introspection. However, I don't think this claim really stands up to any scrutiny. I don't really perceive anything "timely" when I introspect. If anything, it's the opposite. I see myself as a stable ego who persists across the various periods of my life, through sickness, through emotional turmoil, etc. I thus introspect myself as timeless. Similarly, the concept of time is related to my experience of external objects, which are constantly moving and changing. The one source of intuitive appeal that Kant does have on his side is that I don't understand my conscious ego to be an extended object. I don't conceive my emotions as being on the "left" side of my body for example, while my intentions are "over there." But this may just be a fluke of physiology, deriving again from the fact that the brain doesn't have nerve endings. I don't think it's enough to support Kant's claim that time is a necessary form of inward determinations of the mind. (Time underlies everything about the world, objects and thoughts.)</p>
-
+<p class='indent'>Here we see Kant's first assertion that there is some connection between introspection and time. This makes sense aesthetically: space vs. time is one dichotomy; internal vs. external is another dichotomy. The concept of space is more connected to the concept of externality. Thus it makes sense that space would be related to sensation and time would be related to introspection. However, I don't think this claim really stands up to any scrutiny. I don't really perceive anything "timely" when I introspect. If anything, it's the opposite. I see myself as a stable ego who persists across the various periods of my life, through sickness, through emotional turmoil, etc. I thus introspect myself as timeless. Similarly, the concept of time is related to my experience of external objects, which are constantly moving and changing. The one source of intuitive appeal that Kant does have on his side is that I don't understand my conscious ego to be an extended object. I don't conceive my emotions as being on the "left" side of my body for example, while my intentions are "over there." But this may just be a fluke of physiology, deriving again from the fact that the brain doesn't have nerve endings. I don't think it's enough to support Kant's claim that time is a necessary form of inward determinations of the mind. (Time underlies everything about the world, objects and thoughts.)</p>
+<br>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 3.html.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
