--- a/Epicurus/Letter_to_Herodotus_Usener (master).html
+++ b/Epicurus/Letter_to_Herodotus_Usener (master).html
@@ -10,24 +10,10 @@
 
 <h1>Epicurus's "Letter to Herodotus" - Usener Edition</h1>
 
-<hr>
-<h4>Key</h4>
-<ul>
-<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
-  <li>&lt;text&gt; - signifies text added by Usener or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
-  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
-  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Usener or an earlier editor.</li>
-  <li>†...† - indicates text that is corrupt, but which Usener doesn't know how to emend.</li>
-  <li> · - An ano teleia mark, which functions like a semicolon.</li>
-</ul>
-<hr>
-
+<span class="sidenote">
 (Mouseover a Greek word to see the English translation.)
-<br>
-<br>
-
+</span>
 ΕΠΙΚΟΥΡΟΣ ΗΡΟΔΟΤΩΙ ΧΑΙΡΕΙΝ
-<br>
 <br>
 <p class="greek_indent"> [35] Τοῖς μὴ δυναµένοις, ὦ Ἡρόδοτε, ἕκαστα τῶν περὶ φύσεως ἀναγεγραμμένων ἡμῖν ἐξακριβοῦν μηδὲ τὰς µείζους τῶν συντεταγμένων βύβλους διαθρεῖν ἐπιτομὴν τῆς ὅλης πραγµατείας εἰς τὸ κατασχεῖν τῶν ὁλοσχερωτάτων δοξῶν τὴν μνήμην ἱκανῶς ἄν τις παρασκευάσαι, ἵνα παρ᾽ ἑκάστους τῶν καιρῶν ἐν τοῖς κυριωτάτοις βοηθεῖν αὑτοῖς δύνωνται, καθ᾽ ὅσον ἂν ἐφάπτωνται τῆς περὶ φύσεως θεωρίας. Καὶ τοὺς προβεβηκότας δὲ ἱκανῶς ἐν τῇ τῶν ὅλων ἐπιβλέψει τὸν τύπον τῆς ὅλης πραγµατείας τὸν κατεστοιχειωµένον δεῖ μνημονεύειν. τῆς γὰρ ἀθρόας ἐπιβολῆς πυκνὸν δεόμεθα, τῆς δὲ κατὰ µέρος οὐχ ὁμοίως. [36] βαδιστέον μὲν οὖν καὶ ἐπ᾽ ἐκεῖνα συνεχῶς, ἔν τε μνήμη τὸ τοσοῦτον ποιητέον, ἀφ᾽ οὗ ἤ τε κυριωτάτη ἐπιβολὴ ἐπ τὰ πράγµατα ἔσται καὶ δὴ καὶ τὸ κατὰ µέρος ἀκρίβωμα πᾶν ἐξευρήσεται, τῶν ὁλοσχερωτάτων τύπων εὖ περιειλημμένων καὶ μνημονευομένων· ἐπεὶ καὶ τοῦ τετελεσιουργημένου τοῦτο κυριώτατον τοῦ παντὸς ἀκριβώματος γὶνεται, τὸ ταῖς ἐπιβολαῖς ὀξέως δύνασθαι χρῆσθαι, ἑκάστων πρὸς ἁπλᾶ στοιχειώματα καὶ φωνὰς ἀναγομένων. οὐ γὰρ οἷόν τε τὸ πύκνωμα τῆς συνεχοῦς τῶν ὅλων περιοδείας εἶναι μὴ δυναμένου διὰ βραχεῶν φωνῶν ἅπαν ἐμπεριλαβεῖν ἐν αὑτῷ τὸ καὶ κατὰ μέρος ἂν ἐξακριβωθέν. [37] Ὅθεν δὴ πᾶσι χρησίμης οὔσης τοῖς ῴκειωμένοις φυσιολογίᾳ τῆς τοιαύτης ὁδοῦ, παρεγγυῶν τὸ συνεχὲς ἐνέργημα ἐν φυσιολογίᾳ καὶ τοιούτῳ μάλιστα ἐγγαληνίζων τῷ βίῳ ἐποίησά σοι καὶ τοιαύτην τινὰ ἐπιτομὴν καὶ στοιχείωσιν τῶν ὅλων δοξῶν. </p>
 <p class="greek_indent"> Πρῶτον μὲν οὖν τὰ ὑποτεταγμένα τοῖς φθόγγοις, ὦ Ἡρόδοτε, δεῖ εἰληφέναι, ὅπως ἂν τὰ δοξαζόμενα ἢ ζητούμενα ἢ ἀπορούμενα ἔχωμεν εἰς ταῦτα ἀναγαγόντες ἐπικρίνειν, καὶ μὴ ἄκριτα πάντα ἡμῖν &lt;ἴῃ&gt; εἰς ἄπειρον ἀποδεικνύουσιν ἢ κενοὺς φθόγγους ἔχωμεν. [38] ἀνάγκη τὰρ τὸ πρῶτον ἐννόημα καθ᾽ ἕκαστον φθόγγον βλέπεσθαι καὶ μηθὲν ἀποδείξεως προσδεῖσθαι, εἴπερ ἕξομεν τὸ ζητούμενον ἢ ἀπορούμενον καὶ δοξαζόμενον ἐφ᾽ ὃ ἀνάξομεν. ἔπειτα κατὰ τὰς αἰσθήσεις δεῖ πάντα τηρεῖν καὶ ἁπλῶς τὰς παροὖσας ἐπιβολὰς εἴ τε διανοίας εἴ θ᾽ ὅτου δή ποτε τῶν κριτηρίων, ὁμοίως δὲ καὶ τὰ ὑπάρχοντα πάθη, ὅπως ἂν καὶ τὸ προσμένον καὶ τὸ ἄδηλον ἔχωμεν οἷς σημειωσόμεθα. </p>
@@ -57,12 +43,20 @@
 <br>
 <hr>
 <h4>Source</h4>
-The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. 
+The text is from pp.2-32 of <i>Epicurea</i> (1887) by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. (I omitted the footnotes, because I found them to be more distracting than helpful.)
+
+<h4>Key</h4>
+<ul>
+<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - signifies text added by Usener or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
+  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
+  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Usener or an earlier editor.</li>
+  <li>†...† - indicates text that is corrupt, but which Usener doesn't know how to emend.</li>
+  <li> · - An ano teleia mark, which functions like a semicolon.</li>
+</ul>
+
 <br>
 <br>
 <a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
     </body>
   </html>
-  
-  
-  
