--- a/Epicurus/Letter_to_Menoeceus_Bailey (master).html
+++ b/Epicurus/Letter_to_Menoeceus_Bailey (master).html
@@ -10,27 +10,10 @@
 
 <h1>Epicurus's "Letter to Menoeceus" - Bailey Edition</h1>
 
-<hr>
-<h4>Key</h4>
-<ul>
-<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
-  <li>&lt;text&gt; - signifies text added by Bailey or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
-  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
-  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Bailey or an earlier editor.</li>
-  <li>†...† - indicates text that is corrupt, but which Bailey doesn't know how to emend.</li>
-  <li> · - An ano teleia mark, which functions like a semicolon.</li>
-</ul>
-
+<span class="sidenote">
 (Mouseover a Greek word to see the English translation.)
-
-<br>
-<br>
-
+</span>
 <table>
-<tr>
-<th>Greek text</th>
-<th>English text</th>
-</tr>
 <tr>
 <td>ΕΠΙΚΟΥΡΟΣ ΜΕΝΟΙΚΕΙ ΧΑΙΡΕΙΝ</td>
 <td>EPICURUS TO MENOECEUS</td>
@@ -141,7 +124,18 @@
 </tr>
 </table>
 <h4>Source</h4>
-The Greek and English texts are both from from "Epicurus: The Extant Remains" (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up">here</a>), and proofed by myself. 
+The Greek and English texts are from pp.82-93 of <i>Epicurus: The Extant Remains</i> (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up">here</a>), and proofed by myself. (I omitted the footnotes, because I found them to be more distracting than helpful.)
+
+<h4>Key</h4>
+<ul>
+<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - signifies text added by Bailey or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
+  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
+  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Bailey or an earlier editor.</li>
+  <li>†...† - indicates text that is corrupt, but which Bailey doesn't know how to emend.</li>
+  <li> · - An ano teleia mark, which functions like a semicolon.</li>
+</ul>
+
 <br>
 <br>
 <a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
