--- a/Epicurus/Letter_to_Menoeceus_Usener (master).html
+++ b/Epicurus/Letter_to_Menoeceus_Usener (master).html
@@ -10,24 +10,25 @@
 
 <h1>Epicurus's "Letter to Menoeceus" - Usener Edition</h1>
 
+<hr>
 <h4>Key</h4>
 <ul>
 <li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
   <li>&lt;text&gt; - signifies text added by Usener or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
   <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
   <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Usener or an earlier editor.</li>
-  <li>†...†</li> - indicates text that is corrupt, but which Usener doesn't know how to emend.
+  <li>†...† - indicates text that is corrupt, but which Usener doesn't know how to emend.</li>
   <li> · - An ano teleia mark, which functions like a semicolon.</li>
 </ul>
+<hr>
 
 (Mouseover a Greek word to see the English translation.)
-
 <br>
 <br>
 
 ΕΠΙΚΟΥΡΟΣ ΜΕΝΟΙΚΕΙ ΧΑΙΡΕΙΝ
 <br>
-<p class="indent"> [122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
+<p class="greek_indent"> [122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
 
 οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς τὸ κατὰ ψυχὴν ὑγιαῖνον.
 
@@ -36,7 +37,7 @@
 ὥστε φιλοσοφητέον καὶ νέῳ καὶ γέροντι, τῷ μὲν ὅπως γηράσκων νεάζῃ τοῖς ἀγαθοῖς διὰ τὴν χάριν τῶν γεγονότων, τῷ δὲ ὅπως νέος ἅμα καὶ παλαιὸς ᾖ διὰ τὴν ἀφοβίαν τῶν μελλόντων.
 
 μελετᾶν οὖν χρὴ τὰ ποιοῦντα τὴν εὐδαιμονίαν, εἴ περ παρούσης μὲν αὐτῆς πάντα ἔχομεν, ἀπούσης δὲ πάντα πράττομεν εἰς τὸ ταύτην ἔχειν. </p>
-<p class="indent"> [123] Ἃ δέ σοι συνεχῶς παρήγγελλον, ταῦτα καὶ πρᾶττε καὶ μελέτα, στοιχεῖα τοῦ καλῶς ζῆν ταῦτ᾽ εἶναι διαλαμβάνων·
+<p class="greek_indent"> [123] Ἃ δέ σοι συνεχῶς παρήγγελλον, ταῦτα καὶ πρᾶττε καὶ μελέτα, στοιχεῖα τοῦ καλῶς ζῆν ταῦτ᾽ εἶναι διαλαμβάνων·
 
 πρῶτον μὲν τὸν θεὸν ζῷον ἄφθαρτον καὶ μακάριον νομίζων, ὡς ἡ κοινὴ τοῦ θεοῦ νόησις ὑπεγράφη, μηθὲν μήτε τῆς ἀφθαρσίας ἀλλότριον μήτε τῆς μακαριότητος ἀνοίκειον αὐτῷ πρόσαπτε·
 
@@ -55,7 +56,7 @@
 [124] οὐ γὰρ προλήψεις εἰσὶν ἀλλ᾽ ὑπολήψεις ψευδεῖς αἱ τῶν πολλῶν ὑπὲρ θεῶν ἀποφάσεις, ἔνθεν αἱ μέγισται βλάβαι τε τοῖς κακοῖς ἐκ θεῶν ἐπάγονται καὶ ὠφέλειαι &lt;τοῖς ἀγαθοῖς&gt;.
 
 ταῖς γὰρ ἰδίαις οἰκειούμενοι διὰ παντὸς ἀρεταῖς τοὺς ὁμοίους ἀποδέχονται, πᾶν τὸ μὴ τοιοῦτον ὡς ἀλλότριον νομίζοντες. </p>
-<p class="indent"> Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
+<p class="greek_indent"> Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
 
 ἐπεὶ πᾶν ἀγαθὸν καὶ κακὸν ἐν αἰσθήσει·
 
@@ -86,7 +87,7 @@
 Ὁ δὲ παραγγέλλων τὸν μὲν νέον καλῶς ζῆν, τὸν δὲ γέροντα καλῶς καταστρέφειν εὐήθης ἐστὶν οὐ μόνον διὰ τὸ τῆς ζωῆς ἀσπαστόν, ἀλλὰ καὶ διὰ τὸ τὴν αὐτὴν εἶναι μελέτην τοῦ καλῶς ζῆν καὶ τοῦ καλῶς ἀποθνῄσκειν.
 
 πολὺ δὲ χεῖρον καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι, </p>
-<p class="indent"> φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
+<p class="greek_indent"> φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
 
 [127] εἰ μὲν γὰρ πεποιθὼς τοῦτό φησι, πῶς οὐκ ἀπέρχεται τοῦ ζῆν;
 
@@ -95,7 +96,7 @@
 εἰ δὲ μωκώμενος, μάταιος ἐν τοῖς οὐκ ἐπιδεχομένοις.
 
 Μνημονευτέον δὲ ὡς τὸ μέλλον οὔτε ἡμέτερον οὔτε πάντως οὐχ ἡμέτερον, ἵνα μήτε πάντως προσμένωμεν ὡς ἐσόμενον μήτε ἀπελπίζωμεν ὡς πάντως οὐκ ἐσόμενον. </p>
-<p class="indent"> Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
+<p class="greek_indent"> Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
 
 τῶν δ᾽ ἀναγκαίων αἳ μὲν πρὸς εὐδαιμονίαν εἰσὶν ἀναγκαῖαι, αἳ δὲ πρὸς τὴν τοῦ σώματος ἀοχλησίαν, αἳ δὲ πρὸς αὐτὸ τὸ ζῆν.
 
@@ -150,12 +151,12 @@
 ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην), τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνοντος (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε ἀβέβαιον αἰτίαν (&lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν ἢ κακῶν ὑπὸ ταύτης χορηγεῖσθαι),
 
 [135]  κρεῖττον εἶναι νομίζοντος εὐλογίστως ἀτυχεῖν ἢ ἀλογίστως εὐτυχεῖν (βέλτιστον γὰρ ἐν ταῖς πράξεσι τὸ καλῶς κριθὲν ὀρθωθῆναι διὰ ταύτην). </p>
-<p class="indent"> Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
+<p class="greek_indent"> Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
 
 οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀγαθοῖς. </p>
 <br>
 <br>
-__________________________________________________<br>
+<hr>
 <h4>Source</h4>
 The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. 
 <br>
