--- a/Critique of Pure Reason/Transcendental Aesthetic - 3.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 3.html
@@ -3,16 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Transcendental Aethetic, §3. Transcendental exposition of the conception of Space. - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Transcendental Aesthetic §3</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Transcendental Aethetic, §3. Transcendental exposition of the conception of Space. - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Volume_1/Part_1#b3).
+<hr>
+<h4>TRANSCENDENTAL AESTHETIC</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 1. Introductory</a></p>
+Section I. — Of Space<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 2.html'>§ 2. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><b>§ 3. Transcendental Exposition of the Conception of Space *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'>§ 4. Conclusions from the foregoing Conceptions</a></p>
+Section II. — Of Time<br>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 5.html'>§ 5. Metaphysical Exposition of this Conception</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 6.html'>§ 6. Transcendental Exposition of the Conception of Time</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 7.html'>§ 7. Conclusions from the above Conceptions</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 8.html'>§ 8. Elucidation</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 1.html'>§ 9. General Remarks on Transcendental Æsthetic</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+<p>Kant argues that, because Geometrical truths are synthetic a priori, this suggests that space is not an experienced object, per se. It is rather a pure intuition, which has its seat in the subject only. Space is, in other words, the formal capacity of the subject to experience external objects.</p>
 <br>
 
 <table>
@@ -37,10 +52,10 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 </tr>
 <tr>
     <td>
-        Geometrie ist eine Wissenschaft, welche die Eigenschaften des Raums synthetisch und doch a priori bestimmt. Was muß die Vorstellung des Raumes denn seyn, damit eine solche Erkenntniß von ihm möglich sey? Er muß ursprünglich Anschauung seyn; denn aus einem bloßen Begriffe lassen sich keine Sätze, die über den Begriff hinausgehen, ziehen, welches doch in der Geometrie geschieht (<a href='https://epicureanherald.github.io/Critique of Pure Reason/Introduction V.html'>Einleitung V.</a>). Aber diese Anschauung muß a priori, d. i. vor aller Wahrnehmung eines Gegenstandes, in uns angetroffen werden, mithin reine, nicht empirische Anschauung seyn. Denn die geometrischen Sätze sind insgesamt apodictisch, d. i. mit dem Bewußtseyn ihrer Nothwendigkeit verbunden, z. B. der Raum hat nur drey Abmessungen; dergleichen Sätze aber können nicht empirische oder Erfahrungsurtheile seyn, noch aus ihnen geschlossen werden (<a href='https://epicureanherald.github.io/Critique of Pure Reason/Introduction II.html'>Einleit. II.</a>).
+        Geometrie ist eine Wissenschaft, welche die Eigenschaften des Raums synthetisch und doch a priori bestimmt. Was muß die Vorstellung des Raumes denn seyn, damit eine solche Erkenntniß von ihm möglich sey? Er muß ursprünglich Anschauung seyn; denn aus einem bloßen Begriffe lassen sich keine Sätze, die über den Begriff hinausgehen, ziehen, welches doch in der Geometrie geschieht (<a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction V.html'>Einleitung V.</a>). Aber diese Anschauung muß a priori, d. i. vor aller Wahrnehmung eines Gegenstandes, in uns angetroffen werden, mithin reine, nicht empirische Anschauung seyn. Denn die geometrischen Sätze sind insgesamt apodictisch, d. i. mit dem Bewußtseyn ihrer Nothwendigkeit verbunden, z. B. der Raum hat nur drey Abmessungen; dergleichen Sätze aber können nicht empirische oder Erfahrungsurtheile seyn, noch aus ihnen geschlossen werden (<a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction II.html'>Einleit. II.</a>).
     </td>
     <td> 
-        Geometry is a science which determines the properties of space synthetically, and yet à priori. What, then, must be our representation of space, in order that such a cognition of it may be possible? It must be originally intuition, for from a mere conception, no propositions can be deduced which go out beyond the conception,<a href="#Footnote 1">[2]</a> and yet this happens in geometry. (<a href='https://epicureanherald.github.io/Critique of Pure Reason/Introduction V.html'>Introd. V.</a>) But this intuition must be found in the mind à priori, that is, before any perception of objects, consequently must be pure, not empirical, intuition. For geometrical principles are always apodeictic, that is, united with the consciousness of their necessity, as, “Space has only three dimensions.” But propositions of this kind cannot be empirical judgments, nor conclusions from them. (<a href='https://epicureanherald.github.io/Critique of Pure Reason/Introduction II.html'>Introd. II.</a>)  
+        Geometry is a science which determines the properties of space synthetically, and yet à priori. What, then, must be our representation of space, in order that such a cognition of it may be possible? It must be originally intuition, for from a mere conception, no propositions can be deduced which go out beyond the conception,<a href="#Footnote 1">[2]</a> and yet this happens in geometry. (<a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction V.html'>Introd. V.</a>) But this intuition must be found in the mind à priori, that is, before any perception of objects, consequently must be pure, not empirical, intuition. For geometrical principles are always apodeictic, that is, united with the consciousness of their necessity, as, “Space has only three dimensions.” But propositions of this kind cannot be empirical judgments, nor conclusions from them. (<a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction II.html'>Introd. II.</a>)  
     </td>
 </tr>
 <tr>
@@ -60,34 +75,15 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
     </td>
 </tr>
 <!-- <a href="#Footnote 1">[1]</a> -->
-
 </table>
 
-<h3>Footnotes</h3>
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-</tr>
-<tr>
-    <td>
-        <a id="Footnote 1">[2]</a>
-    </td>
-    <td> 
-        <a id="Footnote 1">[2] </a> That is, the analysis of a conception only gives you what is contained in it, and does not add to your knowledge of the object of which you have a conception, but merely evolves it.—Tr.
-    </td>
-</tr>
-</table>
+<h3>Commentary</h3>
 
-<h1>Commentary</h1>
+<p class='indent'>This short section gives us a good glimpse at the fundamental deceptiveness of Kant. He pretends to invent a new term of art, "transcendental exposition," and implies that this will be used throughout the 1st Critique. However, if you examine this term carefully, you'll see that it's nothing more than deduction. He simply asserts some premisses about Geometry, and claims that some conclusions about space follow from the premisses. By hiding the fact that he is making an argument, he again disguises the fact that all of his key arguments were already made in the introduction. If we assume that there are synthetic a priori truths, and that Geometrical truths are synthetic a priori, then, yes, it seems that the concept of space would need to be somehow contained in the mind, or imposed on the outside world by the mind. But, if we do not concede either of those premisses, then Kant's "exposition" of the concept of space is devoid of content. This is because it is not exposition at all, it is just another step in Kant's argument, albeit disguised.</p>
 
-<h3>Summary</h3>
-
-<p>Kant argues that, because Geometrical truths are synthetic a priori, this suggests that space is not an experienced object, per se. It is rather a pure intuition, which has its seat in the subject only. Space is, in other words, the formal capacity of the subject to experience external objects.</p>
-
-<h3>Discussion</h3>
-
-<p>This short section gives us a good glimpse at the fundamental deceptiveness of Kant. He pretends to invent a new term of art, "transcendental exposition," and implies that this will be used throughout the 1st Critique. However, if you examine this term carefully, you'll see that it's nothing more than deduction. He simply asserts some premisses about Geometry, and claims that some conclusions about space follow from the premisses. By hiding the fact that he is making an argument, he again disguises the fact that all of his key arguments were already made in the introduction. If we assume that there are synthetic a priori truths, and that Geometrical truths are synthetic a priori, then, yes, it seems that the concept of space would need to be somehow contained in the mind, or imposed on the outside world by the mind. But, if we do not concede either of those premisses, then Kant's "exposition" of the concept of space is devoid of content. This is because it is not exposition at all, it is just another step in Kant's argument, albeit disguised.</p>
-
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 2.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Transcendental Aesthetic - 4.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
