Even more style changes

--- a/Critique of Pure Reason/Preface to the First Edition.html
+++ b/Critique of Pure Reason/Preface to the First Edition.html
@@ -11,6 +11,12 @@
 <h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
 <hr>
+<h4>PREFACE</h4>
+<p class='indent'><b>Preface to the First Edition *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Preface to the Second Edition.html'>Preface to the Second Edition</a></p>
+<br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
 <h3>Summary</h3>
 
 <p class="indent">Kant presents the Critique of Pure Reason as a complete metaphysical system, which solves the controversies into which scholastic and modern philosophers had fallen. He frames it as a middle path between Rationalists, who claim to prove the existence of God, the unity of the soul, etc., from the armchair, and Empiricists like John Locke (whom he mentions by name), who claim that experience alone is the source of all knowledge. He only hints at the the manner in which his system solves metaphysical controversies. For example, he hints at what he will later explore more fully in the Antinomies of Pure Reason, namely that Dogmatic metaphysical claim arise because of our natural desire to apply the operations of our mind to objects that are beyond our grasp. He concludes with a discussion of the style of the work, stating that he has desired to be thorough and clear, but to omit providing examples because it would make an already long work too long.</p>
