--- a/Critique of Pure Reason/Preface to the Second Edition.html
+++ b/Critique of Pure Reason/Preface to the Second Edition.html
@@ -11,6 +11,12 @@
 <h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
 <hr>
+<h4>PREFACE</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Preface to the First Edition.html'>Preface to the First Edition</a></p>
+<p class='indent'><b>Preface to the Second Edition *</b></p>
+<br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
 <h3>Summary</h3>
 
 <p class="indent">In this preface (as opposed to the preface to the first edition), Kant provides much more information about the propositions that he will be advancing in the Critique. He establishes a metaphor with the recent development of modern science, and claims that the Critique is the first scientific work of metaphysics. He specifically establishes a metaphor with Copernican astronomy, claiming that metaphysical progress may be gained by assuming that external objects conform to our manner of perceiving them (known as transcendental idealism), rather than our perceptual faculties corresponding to the external objects. He introduces the distinction between phenomena — the external objects which have been conditioned by our perceptual faculties — and noumena — the objects as they are in themselves, without being so conditioned. He claims that all we have access to, from a theoretical standpoint, are phenomena. But he hints at a new theory (which will be devoloped in the Second Critique, the Critique of Practical Reason) that we can have access to certain supra-phenomenal knowledge from a practical standpoint, for example, knowledge about God, freedom, and the immortality of the soul.</p>
