--- a/Epicurus/Letter_to_Menoeceus_Usener (master).html
+++ b/Epicurus/Letter_to_Menoeceus_Usener (master).html
@@ -10,22 +10,9 @@
 
 <h1>Epicurus's "Letter to Menoeceus" - Usener Edition</h1>
 
-<hr>
-<h4>Key</h4>
-<ul>
-<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
-  <li>&lt;text&gt; - signifies text added by Usener or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
-  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
-  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Usener or an earlier editor.</li>
-  <li>†...† - indicates text that is corrupt, but which Usener doesn't know how to emend.</li>
-  <li> · - An ano teleia mark, which functions like a semicolon.</li>
-</ul>
-<hr>
-
+<span class="sidenote">
 (Mouseover a Greek word to see the English translation.)
-<br>
-<br>
-
+</span>
 ΕΠΙΚΟΥΡΟΣ ΜΕΝΟΙΚΕΙ ΧΑΙΡΕΙΝ
 <br>
 <p class="greek_indent"> [122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
@@ -158,7 +145,18 @@
 <br>
 <hr>
 <h4>Source</h4>
-The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. 
+The text is from pp.59-66 of <i>Epicurea</i> (1887) by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. (I omitted the footnotes, because I found them to be more distracting than helpful.)
+
+<h4>Key</h4>
+<ul>
+<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - signifies text added by Usener or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
+  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
+  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Usener or an earlier editor.</li>
+  <li>†...† - indicates text that is corrupt, but which Usener doesn't know how to emend.</li>
+  <li> · - An ano teleia mark, which functions like a semicolon.</li>
+</ul>
+
 <br>
 <br>
 <a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
